--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
             <a class="footer__container__items__column__title-bold" href="#">CRYPTER.</a>
             <ul class="footer__container__items__column__style-text">
               <li><a href="#">Explorer</a></li>
-              <li><a href="#">Connect wallet</a></li>
+              <li><a href="/connect-wallet.html">Connect wallet</a></li>
               <li><a href="#">Upload</a></li>
               <li><a href="#">How it work</a></li>
             </ul>
